--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,12 +1,12 @@
+<div class="card">
+  <div class="card-body">
+    <h4 class="card-title">News</h4>
 
-<div class="well">
-<h4>News</h4>
+    {% for article in site.data.news limit:9 %}
+      {{ article.date }}
+      <p class="card-text">{{ article.headline | markdownify}}</p>
+    {% endfor %}
 
-{% for article in site.data.news limit:9 %}
-{{ article.date }}
-<p>{{ article.headline | markdownify}}</p>
-{% endfor %}
-
-<h4><a href="{{ site.url }}{{ site.baseurl }}/allnews.html">... see all News</a></h4>
-
-    </div>
+    <h4><a href="/allnews/" class="card-link">... see all News</a></h4>
+  </div>
+</div>
