--- a/css/main.scss
+++ b/css/main.scss
@@ -1,64 +1,30 @@
 ---
 ---
-    
+
 @import "bootstrap";
 
-img { margin-bottom: 24px; 
-     margin-top: 17px; 
-    border-radius:2%;
-}
-
-
+$navbar-height: 56px;
 body {
-	padding-top: 70px;
+  padding-top: $navbar-height + 14px;
 }
 
-figcaption {
-    text-align: right;
-    margin-top: -20px;
-    margin-bottom: 20px;
-}
+// img {
+//   margin-bottom: 24px; 
+//   margin-top: 17px; 
+//   border-radius:2%;
+// }
 
 
-
-/* Top navigation bar */
-
-
-p.byline {
-	text-align: center;
-	font-size: 18px;
-	line-height: 36px;
-	margin-top: -24px;
-	margin-bottom: 48px;
-}
-
-
-pubtit {
-	font-weight: bold;
-}
-
-firstp {
-}
-
-.container-fluid {
-  margin-right: auto;
-  margin-left: auto;
-  max-width: 1000px; /* or 950px */
-}
-
-/* Home, News */
+/* News */
 #newsid p {
-	text-align: left;
-}
-
-#homeidtmp h1 {
-	text-align: center;
+  text-align: left;
 }
 
 #newsid img {
-	margin-top: 6px;
-	margin-bottom: 6px;
+  margin-top: 6px;
+  margin-bottom: 6px;
 }
+
 
 /* Team & Publications */
 #gridid img { margin: 16px 22px 6px 0; border-radius:10%; box-shadow: 2px 2px 5px #888888 }
@@ -67,27 +33,20 @@ firstp {
 #gridid .row { margin-bottom: 24px; }
 
 
-/* Grid overrides */
-.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-5, .col-sm-6,
-.col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
-	padding-left: 16px;
-	padding-right: 16px;
+/* Carousel */
+// The following centers the images and ensures they fill the box
+$carousel-height: 250px;
+#vectrCarousel .carousel-item {
+  height: 100%;
 }
-
-/* Grid overrides */
-.col-sm-4 {
-	padding-left: 26px;
-	padding-right: 26px;
+#vectrCarousel img {
+  display: block;
+  object-fit: cover;
+  min-height: 100%;
+  transform: translateY(-50%);
+  margin-top: $carousel-height / 2;
 }
-
-
-/* Carusel */
-
-.carousel {
-    border-radius: 3px 3px 3px 3px;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    margin-left: 30px;
-    margin-right: 30px;
+#vectrCarousel {
+  height: $carousel-height;
+  margin-bottom: 20px;
 }
-
