Experiment with bootstrap-dark

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div class="bg-light">
+<div class="bg-header-footer-bg text-light">
   <div class="container-lg">
     <footer>
       <div class="row">
