--- a/_sass/_bootstrap.scss
+++ b/_sass/_bootstrap.scss
@@ -1,20 +1,35 @@
 // Customize Bootstrap (see https://getbootstrap.com/docs/5.1/customize/sass/)
 
-@import "bootstrap/functions";
-@import "bootstrap/variables";
-@import "bootstrap/mixins";
+// Dark mode configuration based on https://github.com/vinorodrigues/bootstrap-dark-5/blob/main/scss/bootstrap-night.scss 
 
-$custom-color: $yellow-200;
+// Include Bootstrap variables
+@import "bootstrap-dark/bootstrap-colors";
 
+// Activate dark mode
+@import "bootstrap-dark/dark/variables-map-alt-to-core";
+// :root { color-scheme: dark; }
+
+// Custom color definitions
+$header-footer-bg: $black;
+$panel-bg: $dark;
+
+// Custom theme colors
 $theme-colors:map-merge($theme-colors, (
-  "primary": $blue-500,
-  "custom-color": $custom-color
+  "primary": $yellow-300,
+  "header-footer-bg": $header-footer-bg,
+  "panel-bg": $panel-bg
 ));
 
-// propagate custom theme colors to relevant variables (see https://stackoverflow.com/a/68762902)
+// Propagate custom theme colors to relevant variables (see https://stackoverflow.com/a/68762902)
 $theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
 $utilities-colors: map-merge($utilities-colors, $theme-colors-rgb);
 $utilities-text-colors: map-loop($utilities-colors, rgba-css-var, "$key", "text");
 $utilities-bg-colors: map-loop($utilities-colors, rgba-css-var, "$key", "bg");
 
+// Include Bootstrap
+@import "bootstrap/utilities";
+@import "bootstrap-dark/dark/patch";
 @import "bootstrap/bootstrap";
+
+// Extra dark mode stuff
+@import "bootstrap-dark/dark/dark";
