--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-header-footer-bg fixed-top">
   <div class="container-lg">
-    <a class="navbar-brand" href="/">VECTR Lab @ UCLA</a>
+    <a class="navbar-brand" href="/">
+      <img src="/images/nav_logo.png" height="60">
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
