--- a/_sass/_bootstrap.scss
+++ b/_sass/_bootstrap.scss
@@ -7,6 +7,8 @@
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
 
+$navbar-padding-y: 1px;
+
 // Custom color definitions
 $header-footer-bg: $black;
 $panel-bg: $dark;
