--- a/css/main.scss
+++ b/css/main.scss
@@ -28,25 +28,23 @@ body {
 
 /* Team & Publications */
 #gridid img { margin: 16px 22px 6px 0; border-radius:10%; /* box-shadow: 2px 2px 5px #888888 */ }
-#homeid img { margin: 0 0 0 0; border-radius:5%; /* box-shadow: 0px 0px 0px #888888 */ }
+// #homeid img { margin: 0 0 0 0; border-radius:5%; /* box-shadow: 0px 0px 0px #888888 */ }
 #picid img { margin: 6px 3px 60px 6px; border-radius:1%; /* box-shadow: 2px 2px 5px #888888 */ }
 #gridid .row { margin-bottom: 24px; }
 
 
 /* Carousel */
-// The following centers the images and ensures they fill the box
-$carousel-height: 250px;
 #vectrCarousel .carousel-item {
   height: 100%;
 }
 #vectrCarousel img {
   display: block;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
-  min-height: 100%;
-  transform: translateY(-50%);
-  margin-top: $carousel-height / 2;
+  object-position: center center;
 }
 #vectrCarousel {
-  height: $carousel-height;
+  height: 250px;
   margin-bottom: 20px;
 }
