--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,34 +1,24 @@
----
-title: "VECTR Lab - Home"
-layout: home_layout
-excerpt: "VECTR Lab at UCLA."
-sitemap: false
-permalink: /
----
-
-# VECTR at UCLA
-#### *The Verifiable & Control-Theoretic Robotics Lab*
-
-Description goes here.
-
-<div markdown="0" id="vectrCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000" data-bs-pause="hover">
+<div id="vectrCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="4000" data-bs-pause="false">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#vectrCarousel" data-bs-slide-to="0" class="active" aria-current="true"></button>
     <button type="button" data-bs-target="#vectrCarousel" data-bs-slide-to="1"></button>
-    <button type="button" data-bs-target="#vectrCarousel" data-bs-slide-to="2"></button>
   </div>
 
   <!-- Items -->
   <div class="carousel-inner h-100">
     <div class="carousel-item active">
       <img src="/images/carousel/sculpture_garden.png">
-    </div>
-    <!-- <div class="carousel-item">
-      <img src="/images/dummy.png">
+      <div class="vectr-carousel-text vectr-darken">
+        <div>
+          <!-- <h1>VECTR at UCLA</h1> -->
+          <h2>Verifiable & Control-Theoretic Robotics Laboratory</h2>
+          <p class="lead">Some description</p>
+        </div>
+      </div>
     </div>
     <div class="carousel-item">
       <img src="/images/dummy.png">
-    </div> -->
+    </div>
   </div>
 
   <button class="carousel-control-prev" type="button" data-bs-target="#vectrCarousel" data-bs-slide="prev">
@@ -40,12 +30,3 @@ Description goes here.
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-
-More description goes here.
-
-<!-- <figure class="fourth">
-  <img src="/images/logopic/Logo_Leiden.jpg" style="width: 210px">
-  <img src="/images/logopic/Logo_Nanofront.jpg" style="width: 110px">
-  <img src="/images/logopic/Logo_NWO.jpg" style="width: 120px">
-  <img src="/images/logopic/Logo_ERC.jpg" style="width: 110px">
-</figure> -->
