--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
-<div class="bg-header-footer-bg text-light">
-  <div class="container-lg">
+<div class="bg-header-footer-bg text-muted">
+  <div class="vectr-wide-container">
     <footer>
-      <div class="row">
+      <div class="row py-3">
 
         <p>Footer goes here</p>
 
@@ -14,17 +14,17 @@
 
         </div>
         <div class="col-sm-4">
-          Funding:<br />
-          - <a href="http://www.nwo.nl/en/research-and-results/programmes/Talent+Scheme">Vidi </a> and <a href='https://www.fom.nl/en/news/press-releases/2016/11/18/28634/'>Projectruimte</a> grants from <a href="http://www.nwo.nl">NWO</a> <br />
+          Funding:<br>
+          - <a href="http://www.nwo.nl/en/research-and-results/programmes/Talent+Scheme">Vidi </a> and <a href='https://www.fom.nl/en/news/press-releases/2016/11/18/28634/'>Projectruimte</a> grants from <a href="http://www.nwo.nl">NWO</a> <br>
           - <a href="https://www.universiteitleiden.nl/en/research/research-projects/science/frontiers-of-nanoscience-nanofront">Frontier of Nanosciences</a>, a gravity program from <a href="http://www.nwo.nl">NWO</a>
           - <a href='https://www.universiteitleiden.nl/en/news/2017/08/two-erc-grants-for-leiden-physics'>ERC starting grant</a>
         </div>
         <div class="col-sm-4">
-          Contact:<br />
-          Oort building, Leiden University<br />
-          Niels Bohrweg 2<br />
-          2333 CA Leiden<br />
-          Netherlands <br />
+          Contact:<br>
+          Oort building, Leiden University<br>
+          Niels Bohrweg 2<br>
+          2333 CA Leiden<br>
+          Netherlands <br>
             (<a href="https://goo.gl/maps/H2RjutkyoUH2">Maps</a>, <a href="http://www.physics.leidenuniv.nl/travel-directions">Directions</a>)
         </div> -->
       </div>
