--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-header-footer-bg fixed-top">
-  <div class="container-lg">
+<nav class="navbar navbar-expand-md navbar-dark bg-header-footer-bg fixed-top"> 
+  <div class="vectr-wide-container">
     <a class="navbar-brand" href="/">
       <img src="/images/nav_logo.png" height="60">
     </a>
@@ -7,10 +7,12 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
+      <div class="navbar-nav w-100">
         {% for item in site.data.navbar %}
           <a class="nav-link{% if item.url == page.url %} active{% endif %}" {% if item.url == page.url %}aria-current="page"{% endif %} href="{{ item.url }}">{{ item.title }}</a>
         {% endfor %}
+        <a class="nav-link h4 py-md-0 my-auto ms-md-auto" target="_blank" href="https://www.youtube.com/channel/UCaBrHRwEg6QgUzXaa5mN7pQ"><i class="bi bi-youtube"></i></a>
+        <a class="nav-link h4 py-md-0 my-auto ms-md-2" target="_blank" href="https://github.com/vectr-ucla"><i class="bi bi-github"></i></a>
       </div>
     </div>
   </div>
