cleanup; example news, pub; added news to navbar

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <footer>
       <div class="row py-3">
 
-        <p>Footer goes here</p>
+        <p>&copy 2022 VECTR Laboratory</p>
 
         <!-- <div class="col-sm-4">
             
