Update web-font-path to include light font weight

--- a/_sass/_bootstrap.scss
+++ b/_sass/_bootstrap.scss
@@ -7,6 +7,8 @@
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
 
+$web-font-path: "https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400&display=swap";
+
 $navbar-padding-y: 1px;
 $enable-negative-margins: true;
 
