Added missed out members and edited homepage

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -12,7 +12,7 @@
         <div>
           <!-- <h1>VECTR at UCLA</h1> -->
           <h2>Verifiable & Control-Theoretic Robotics Laboratory</h2>
-          <p class="lead">Some description</p>
+          <p class="lead">University of California, Los Angeles</p>
         </div>
       </div>
     </div>
