Added member pictures and research page, and made other edits

--- a/_includes/recent_news.html
+++ b/_includes/recent_news.html
@@ -11,6 +11,6 @@
       </div>
     {% endfor %}
 
-    <h4><a href="/news/" class="card-link">... see all News</a></h4>
+    <h4><a href="/news/" class="card-link">... see all news</a></h4>
   </div>
 </div>
