--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -2,6 +2,7 @@
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#vectrCarousel" data-bs-slide-to="0" class="active" aria-current="true"></button>
     <button type="button" data-bs-target="#vectrCarousel" data-bs-slide-to="1"></button>
+    <button type="button" data-bs-target="#vectrCarousel" data-bs-slide-to="2"></button>
   </div>
 
   <!-- Items -->
@@ -17,7 +18,10 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/images/dummy.png">
+      <img src="/images/carousel/aquila.png">
+    </div>
+    <div class="carousel-item">
+      <img src="/images/carousel/vectr-team.jpg">
     </div>
   </div>
 
