Added Matthew's info and carousel pic

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -18,7 +18,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/images/carousel/aquila.png">
+      <img src="/images/carousel/aquila.jpg">
     </div>
     <div class="carousel-item">
       <img src="/images/carousel/vectr-team.jpg">
