Last second-to-last commit

--- a/_layouts/home_layout.html
+++ b/_layouts/home_layout.html
@@ -8,7 +8,7 @@ layout: wide_layout
   <div class="col-sm-8">
     {{ content }}
   </div>
-  <div class="col-sm-4">
+  <!-- <div class="col-sm-4">
     {% include recent_news.html %}
-  </div>
+  </div> -->
 </div>
