Update home page.

--- a/_layouts/home_layout.html
+++ b/_layouts/home_layout.html
@@ -5,7 +5,7 @@ layout: wide_layout
 {% include carousel.html %}
 
 <div class="row">
-  <div class="col-sm-8">
+  <div class="col">
     {{ content }}
   </div>
   <!-- <div class="col-sm-4">
