--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -21,7 +21,7 @@
       <img src="/images/carousel/aquila.jpg">
     </div>
     <div class="carousel-item">
-      <img src="/images/carousel/vectr-team.jpg">
+      <img src="/images/carousel/stitcher.png">
     </div>
   </div>
 
