--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <nav id="vectrNavbar" class="navbar navbar-expand-md navbar-dark bg-header-footer-bg fixed-top"> 
   <div class="vectr-wide-container">
     <a class="navbar-brand" href="/">
-      <img src="/images/vectr.png">
+      <img src="/images/vectr2.png">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
